kubernetes/statping/statping.yml
# statping.yml
# TODO(Malik): statping configmap
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: psql
  name: create-statping-database
spec:
  containers:
  - args:
    - psql
    - postgres://postgres:$(POSTGRES_ADMIN_PASSWORD)@postgres-cluster
    - -c
    - |-
      -- CREATE USER statping WITH ENCRYPTED PASSWORD '$(POSTGRES_STATPING_USER)' CREATEDB;
      GRANT ALL PRIVILEGES ON DATABASE statping TO statping;
      -- CREATE DATABASE statping WITH OWNER statping TEMPLATE template0 ENCODING UTF8 LC_COLLATE 'en_US.UTF-8' LC_CTYPE 'en_US.UTF-8';
      GRANT ALL on schema public TO statping;
    image: ongres/postgres-util
    name: create-statping-database-user
    resources: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statping
  labels:
    app: statping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statping
  template:
    metadata:
      labels:
        app: statping
    spec:
      containers:
      - name: statping
        image: hunterlong/statping:v0.80.51
        ports:
        - containerPort: 8080
        volumeMounts:
          - mountPath: /app/config.yml
            subPath: config.yml
            name: statping-config
      volumes:
        - name: statping-config
          configMap:
            name: statping-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: statping
  name: statping
  namespace: default
spec:
  ports:
  - name: 80-8080
    nodePort: 31350
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: statping
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: statping
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: statping.mksybr.com
    http:
      paths:
      - backend:
          service:
            name: statping
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: statping
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - statping.mksybr.com
    secretName: letsencrypt-prod
---
